fix(engine,control): the one in-place store write and the one uncapped list route; layer-2 audit filed 15 rows
Second audit layer — API contract, Java module structure, database, files — grounded in code
by four parallel explorers plus own mechanical checks. Rows land in docs/BACKLOG.md §4 "Module
audit 2026-09-17, layer 2"; board 77 -> 91 (5 P1 / 52 P2 / 34 P3), counts derived. One agent
finding ("the acquisition ledger has no prune caller") was refuted against LedgerPruneTask and
dropped before filing.

Fixed here rather than filed:
- PipelineWatermarkStore.put wrote in place — the ONE store not using AtomicFiles; a crash
  mid-write left a torn watermark the next incremental run read as empty (silent full re-read).
  Now temp + ATOMIC_MOVE; PipelineWatermarkStoreTest 3/3.
- GET /signals and /signals/tree passed the caller's limit straight through — the one list route
  in the package with no ceiling. Clamped to 5000 like RunRoutes; ControlApiSignalsTest 4/4.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>